--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 
   <h1>Culto - Música Isolada</h1>
 
+<h2>6. João 20 <span class="tom">(Tom: G)</span></h2>
+  <pre>
+Intro D AC# Bm G
+ D AC# Bm G
+
+  
   <h2>6. [Nome da Música] <span class="tom">(Tom: G)</span></h2>
   <pre>
 Intro:
@@ -66,6 +72,14 @@ C G D (x3)
 
 A Cruz:
 C G/B Em D
+
+<h2>6. Ja estou Crucificado <span class="tom">(Tom: G)</span></h2>
+  <pre>
+Intro D Am GB C 
+G D Em C
+    
+
+
   </pre>
 <hr>
 </body>
