--- a/index.html
+++ b/index.html
@@ -43,7 +43,28 @@
 <body>
 
   <h1>Culto - Música Isolada</h1>
+<pre>
+Os anjos te louvam (Eli soares)
 
+Vem com Josué ( Eli soares)
+
+              Medley /Ton (C)
+1. Jesus Filho de Deus (Fernandinho)
+   2.joao 20
+  
+  3.a morte vencestes 
+
+  4.morte e choro, tristeza e dor
+
+  5.porque ele vive
+
+  <pre>
+
+
+
+  
+
+  
 <h2>6. João 20 <span class="tom">(Tom: G)</span></h2>
   <pre>
 Intro D AC# Bm G
