--- a/index.html
+++ b/index.html
@@ -71,33 +71,33 @@ Intro D AC# Bm G
  D AC# Bm G
 
   
-  <h2>6. [Nome da Música] <span class="tom">(Tom: G)</span></h2>
+  <h2>6. Jesus Filho de Deus  <span class="tom">(Tom: G)</span></h2>
   <pre>
 Intro:
-G C G C
+C F C F
 
 Verso 1:
-G C G C
-Em C G (x2)
+C F C F
+Am F C (x2)
 
 Coro:
-G D G G C G/B D4
-Em D/F# G C G/B D4
-C G/B D4
+C G C C F C/E G4
+Am G/B C F C/E G4
+F C/E G4
 
 Verso 2:
-G Am7 G/B C G/D C G/B C D
+C Dm7 Em F C/G F C/E F G
 
 Ponte:
-C G D (x3)
+F C G (x3)
 
 A Cruz:
-C G/B Em D
+F C/E Am G
 
 <h2>6. Ja estou Crucificado <span class="tom">(Tom: G)</span></h2>
   <pre>
-Intro D Am GB C 
-G D Em C
+G Dm C/E F
+C G Am F
     
 
 
