--- a/index.html
+++ b/index.html
@@ -49,8 +49,6 @@ Os anjos te louvam (Eli soares)
 Vem com Josué ( Eli soares)
 
               Medley /Ton (C)
-1. Jesus Filho de Deus (Fernandinho)
-   2.joao 20
   
   3.a morte vencestes 
 
@@ -65,10 +63,7 @@ Vem com Josué ( Eli soares)
   
 
   
-<h2>6. João 20 <span class="tom">(Tom: G)</span></h2>
-  <pre>
-Intro D AC# Bm G
- D AC# Bm G
+
 
   
   <h2>6. Jesus Filho de Deus  <span class="tom">(Tom: G)</span></h2>
@@ -103,5 +98,10 @@ C G Am F
 
   </pre>
 <hr>
-</body>
+
+<h2>João 20 <span class="tom">(Tom: G)</span></h2>
+  <pre>
+Intro C G/B Am F
+C G/B Am F
+  </body>
 </html>
