--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
       font-family: Arial, sans-serif;
       padding: 20px;
       line-height: 2;
-      font-size: 28px;
+      font-size: 32px; /* Aumentado para maior visibilidade */
     }
     h1 {
       text-align: center;
       color: #00ffcc;
-      font-size: 36px;
+      font-size: 40px; /* Aumentado */
       margin-bottom: 40px;
     }
     h2 {
       margin-top: 60px;
       color: #00ccff;
-      font-size: 32px;
+      font-size: 36px; /* Aumentado */
     }
     hr {
       margin: 50px 0;
@@ -29,13 +29,13 @@
     }
     .tom {
       color: #aaa;
-      font-size: 24px;
+      font-size: 28px; /* Aumentado */
     }
     pre {
       font-family: monospace;
       white-space: pre-wrap;
       word-wrap: break-word;
-      font-size: 28px;
+      font-size: 32px; /* Aumentado para o conteúdo de acordes */
       margin-top: 12px;
     }
   </style>
@@ -43,36 +43,42 @@
 <body>
 
   <h1>Culto - Música Isolada</h1>
-<pre>
-Os anjos te louvam (Eli soares)
 
-Vem com Josué ( Eli soares)
+  <hr>
 
-              Medley /Ton (C)
-  
-  3.a morte vencestes 
-
-  4.morte e choro, tristeza e dor
-
-  5.porque ele vive
-
+  <h2>Moisés (Fernandinho)</h2>
+  <p>Capotraste na Casa 1</p>
   <pre>
+Intro Dm 4 - F G
+Versos Dm
+Do Pecado G7
+Coro Dm A#9 F C
+  </pre>
 
+  <hr>
 
-
-  <h2>Os anjos te louvam</h2> <p>Capotraste 4 casa</p>
-<pre
-  >Intro Am7 Dm7
+  <h2>Os anjos te louvam (Eli Soares)</h2>
+  <p>Capotraste 4 casa</p>
+  <pre>
+Intro Am7 Dm7
 Versos Am7 Dm7 Em7
-       Am7 F7M Em7 Dm7 Em7  
-Coro F7M E7 - Am7 D7 - Dm7 E7 - Am7 Gm7 C7 
-<pre>
+      Am7 F7M Em7 Dm7 Em7
+Coro F7M E7 - Am7 D7 - Dm7 E7 - Am7 Gm7 C7
+  </pre>
 
-  
+  <h2>Vem com Josué (Eli Soares)</h2>
+  <pre>
+  (Acordes e detalhes, se houver)
+  </pre>
 
+  <h2>Medley <span class="tom">(Tom: C)</span></h2>
+  <pre>
+  A morte vencestes
+  Morte e choro, tristeza e dor
+  Porque ele vive
+  </pre>
 
-  
-  <h2>6. Jesus Filho de Deus  <span class="tom">(Tom: G)</span></h2>
+  <h2>Jesus Filho de Deus <span class="tom">(Tom: G)</span></h2>
   <pre>
 Intro:
 C F C F
@@ -94,20 +100,21 @@ F C G (x3)
 
 A Cruz:
 F C/E Am G
+  </pre>
 
-<h2>6. Ja estou Crucificado <span class="tom">(Tom: G)</span></h2>
+  <h2>Já estou Crucificado <span class="tom">(Tom: G)</span></h2>
   <pre>
 G Dm C/E F
 C G Am F
-    
-
-
   </pre>
-<hr>
 
-<h2>João 20 <span class="tom">(Tom: G)</span></h2>
+  <hr>
+
+  <h2>João 20 <span class="tom">(Tom: G)</span></h2>
   <pre>
 Intro C G/B Am F
 C G/B Am F
-  </body>
+  </pre>
+
+</body>
 </html>
