--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <hr>
 
-  <h2>Moisés (FernandinhoO)</h2>
+  <h2>Moisés (FernandinhoOO)</h2>
   <p>Capotraste na Casa 1</p>
   <pre>
 Intro Dm 4 - F G
